AD-2003-11-10-0: Bugfix:    Fixed the build
                 Changed:   sec_lib, commlib, cull_list

AD-2003-11-07-0: Cleanup:   Removed obsolete RMON functionality. Preserved
                            local RMON functionality (RMON light).
                 Changed:   rmon
                 Review:    AH

SG-2003-11-07-2: Bugfix:    scheduler crashed, when bool resources were
                            used
                 Changed.   scheduler                            

SG-2003-11-07-1: Bugfix:    removed to many elements from the queue CULL 
                            structure
                 Changed:   scheduler                            

SG-2003-11-07-0: Bugfix:    three sub lists of the job category where freed
                            twice.
                 Changed:   scheduler                            

SG-2003-11-06-3: Enhancem.: Limited the copied queue structure in the scheduler
                            to the needed elements. Removed queue structure
                            elements, which were never used.
                 Changed:   scheduler                            

SG-2003-11-06-2: Enhancem.: Added a string type to the centries, which allows 
                            regular expression matching.
                 Changed:   scheduler, qmaster, qstat, man pages

SG-2003-11-06-1: Bugfix:    qstat -F did not dump out string and host values
                 Changed:   qstat

SG-2003-11-06-0: Bugfix:    qstat -f -l xxx seg. faulted, when xxx was unknown.
                 Changed:   scheduler, qmaster, qstat

SG-2003-11-05-0: Enhancem.: Updated the resource_attributes document

JG-2003-11-05-0: Enhancem.: Made functions job_get_job_key, job_get_key and 
                            job_parse_key MT safe.
                            Reporting: Made reporting functions (accounting and 
                            new report file) MT safe
                            Switched to Berkeley DB 4.1.25
