@@ -1,3 +1,7 @@
+SG-2003-11-10-0: Bugfix:    scheduler died. The resource matching caching did
+                            not handle error messages correct.
+                 Changed:   schedd, qmaster                            
+
 AD-2003-11-10-0: Bugfix:    Fixed the build
                  Changed:   sec_lib, commlib, cull_list
 
